--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -2,14 +2,17 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Content Manager</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<title>ADMIN | Positive Professionals</title>
 
 		<!-- Include the styles for the Netlify CMS UI, after your own styles -->
-		<link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.css" />
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.css" />
 	</head>
 	<body>
-		<h1>Positive Professionals ADMIN</h1>
 		<!-- Include the script that builds the page and powers Netlify CMS -->
 		<script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
 	</body>
